style.css
/* Add your CSS styles here */
body {
    font-family: sans-serif;
    background-color: rgb(24, 28, 31);
    margin: 0;
    padding: 0;
}

header {
    background-color: rgb(37, 43, 47);
    color: #fff;
    padding: 20px 20px 10px 20px;
}

.header {
    text-align: center;
}

.container {
    max-width: 800px;
    margin: 20px auto;
    padding: 20px;
    background-color: rgb(18, 21, 23);
    color: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

h1 {
    font-size: 50px;
}

p {
    font-size: 18px;
    line-height: 1.6;
    padding: 0 10px;
}

.cta-button {
    display: block;
    text-align: center;
    background-color: rgb(37, 43, 47);
    color: #fff;
    font-size: 20px;
    padding: 15px 30px;
    margin: 20px auto;
    text-decoration: none;
    border-radius: 5px;
}

.cta-button:hover {
    background-color: #333;
}

.logo img {
    width: 50px; /* Adjust as needed */
}

nav ul {
    list-style: none;
    display: flex;
}

nav ul li {
    margin-right: 20px;
}

nav a {
    text-decoration: none;
    color: #fff;
    font-weight: bold;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.gif-container {
    flex: 1;
    padding: 20px;
    text-align: center;
    border-color: #333;
    border-width: 3px;
}

.centered-gif {
    max-width: 50%;
    display: block;
    margin: 0 auto;
}

.container.about {
    flex: 1;
}
/*
.container.products {
    padding: 20px;
}

.container.contact {
    padding: 20px;
}
*/
.product.images {
    text-align: center;
}

/*.main-content {
    display: flex;
    justify-content: center;
    align-items: center;
}*/
.product-image {
    max-width: 300px;
    margin: 20px;
}

footer {
    text-align: center;
    background-color: #333;
    color: #fff;
    padding: 10px 0;
}

